fix: spacing of embeds

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
 
 /* spacing added by some themes (e.g. Prism) */
 body .internal-embed .markdown-embed-content {
-	padding: 0 0 0 4px;
+	padding: 0;
 }
 
 /* ────────────────────────────────────────────────────────────────────────── */
